# Bathbot

./: Cargo.toml
bathbot-cache/: Cargo.toml
bathbot-cache/src/: channel.rs  config.rs  current_user.rs  guild.rs  lib.rs  member.rs  role.rs  serializer.rs  user.rs
bathbot-model/src/: lib.rs  ranking_entries.rs
bathbot/src/active/impls/scores/: map.rs  server.rs
bathbot/src/commands/fun/: higherlower_game.rs
bathbot/src/commands/fun/bg_game/: rankings.rs
bathbot/src/commands/help/: interaction.rs
bathbot/src/commands/osu/: serverleaderboard.rs
bathbot/src/commands/owner/: cache.rs
bathbot/src/commands/utility/: authorities.rs  server_config.rs
bathbot/src/core/: stats.rs
bathbot/src/core/commands/: checks.rs
bathbot/src/core/context/: mod.rs  shutdown.rs
bathbot/src/core/events/: mod.rs
bathbot/src/core/events/message/: mod.rs
bathbot/src/embeds/utility/: server_config.rs
bathbot/src/manager/redis/: data.rs  mod.rs
