[package]
name = "bathbot-cache"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bytecheck = { version = "~0.7.0" }
pin-project = { version = "~1.1.3" }
# redlight = { git = "https://github.com/MaxOhn/redlight", default-features = false, features = ["bb8", "cold_resume", "metrics", "validation"] }
redlight = { path = "../../redlight", default-features = false, features = ["bb8", "cold_resume", "metrics", "validation"] }
rkyv = { version = "0.7.42", default-features = false, features = ["size_32", "std", "strict"] }
rkyv-with = { version = "0.1" }
twilight-model = { workspace = true }
# bathbot-model = { path = "../bathbot-model" }
# bb8-redis = { version = "0.12" }
# eyre = { version = "0.6" }
# itoa = { version = "1.0" }
# once_cell = { version = "1.0" }
# tracing = { version = "0.1" }
# twilight-model = { workspace = true }
# twilight-gateway = { workspace = true }